<resources>
    <string name="app_name">vuFinder</string>
    <string name="volunteer_finder"><i>Volunteer Finder</i></string>
    <string name="log_in">log_in</string>
    <string name="sign_up">sign_up</string>
    <string name="confirm_password">confirm password</string>
    <string name="confirm_password_st">confirm_password</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="full_name">Full Name</string>
    <string name="ScrollView">Scroll View</string>
    <string name="birthdate" />
    <string name="BirthDate">Birth Date</string>
    <string name="title_activity_user_menu">UserMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">My profile</string>
    <string name="menu_gallery">Join activity</string>
    <string name="menu_slideshow">Create activity</string>
    <string name="Profile">Profile</string>
    <string name="JoinActivity">Join Activity</string>
    <string name="CreateActivity">Create Activity</string>
    <string name="ActivtyName">Activty name</string>
    <string name="ActivityDescription">Activity Description</string>
    <string name="EffortList">Expected effort</string>
    <string name="minAge">minAge</string>
    <string name="maxAge">maxAge</string>
    <string name="DeleteActivity">Delete Activity</string>
    <string name="timeButton">time button</string>
    <string name="NoActivitiesFound">Sorry didn\'t find any activities at the moment :(</string>
    <string name="tryDifferentFilters">which match your search... maybe change the filters</string>
    <string name="CategoryFilter">Show me only activities which match my skills.</string>
    <string name="categoryFilter">Show me only activities that match my skills.</string>
    <string name="ageFilter">show me activities that match my age</string>
    <string name="ShowAllFilters">Show All Filters</string>
    <string name="genderFilter">Show me only activities that is restricted to my gender.</string>
    <string name="keyWord">keyWord</string>
    <string name="nextPage">next Page</string>
    <string name="prevuiosPage">prevuios page</string>
    <string name="Date"><u>Date</u></string>
    <string name="SortByName"><u>, Name</u></string>
    <string name="location"><u>Location</u></string>
    <string name="SortByLocation"><u>,Location</u></string>
    <string name="Host"><u>Host</u></string>
    <string name="participants">participants</string>
    <string name="uploadPicFromCamera">upload Picture using camera</string>
    <string name="Image"><u>Image</u></string>
    <string name="Inbox">Inbox</string>
    <string-array name="effort">
        <item>No effort</item>
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
        <item>Very hard</item>
    </string-array>
    <string-array name="effortFilter">
        <item>show all</item>
        <item>No effort</item>
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
        <item>Very hard</item>
    </string-array>
    <string-array name="time">
        <item>immediate</item>
        <item>less than 3 hours</item>
        <item>3-7 hours</item>
        <item>1 day</item>
        <item>2-3 days</item>
        <item>4-6 days</item>
        <item>1-2 weeks</item>
        <item>1 month or more</item>
    </string-array>
    <string-array name="timeFilter">
        <item>show all</item>
        <item>immediate</item>
        <item>less than 3 hours</item>
        <item>3-7 hours</item>
        <item>1 day</item>
        <item>2-3 days</item>
        <item>4-6 days</item>
        <item>1-2 weeks</item>
        <item>1 month or more</item>
    </string-array>
    <string-array name="gender">
        <item>any</item>
        <item>men only</item>
        <item>women only</item>
    </string-array>
    <string-array name="categories">
        <item>hand_craft</item>
        <item>sport</item>
        <item>teach</item>
        <item>hard_worker</item>
        <item>artist</item>
        <item>fix_things</item>
        <item>bilingual</item>
        <item>medical_training</item>
        <item>cocking</item>
        <item>other</item>
    </string-array>
</resources>