<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/ScrollView"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:background="@drawable/appbg"
    app:layout_constraintTop_toTopOf="parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateActivity.CreateActivityFragment">

    <TextView
        android:id="@+id/textViewStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="starting time"
        style="@style/customTextTest"
        app:layout_constraintStart_toEndOf="@+id/button_date"
        app:layout_constraintTop_toTopOf="@+id/textViewStartDate" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="195dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/EffortList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCategory" />

    <EditText
        android:id="@+id/editTextMaxAge"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:ems="10"
        android:hint="@string/maxAge"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/editTextMinAge"
        app:layout_constraintTop_toBottomOf="@+id/textViewmaxAge" />

    <TextView
        android:id="@+id/textViewmaxAge"
        style="@style/customTextTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="max"
        app:layout_constraintEnd_toEndOf="@+id/editTextMaxAge"
        app:layout_constraintStart_toStartOf="@+id/editTextMaxAge"
        app:layout_constraintTop_toBottomOf="@+id/textViewAgeActivity" />

    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/EffortList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGenderForAct" />

    <TextView
        android:id="@+id/textViewExpectedTime"
        android:layout_width="wrap_content"
        style="@style/customTextTest"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:text="Expected time"
        app:layout_constraintStart_toEndOf="@+id/textViewExpectedEffort"
        app:layout_constraintTop_toBottomOf="@+id/editTextActivityDescription" />

    <TextView
        android:id="@+id/textViewActivityName"
        style="@style/customTextTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="Activity name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonCancel" />

    <TextView
        android:id="@+id/textViewActivityDiscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        style="@style/customTextTest"
        android:layout_marginTop="30dp"
        android:text="Activity description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextActivityName" />

    <EditText
        android:id="@+id/editTextActivityName"
        android:layout_width="281dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/ActivtyName"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewActivityName" />

    <EditText
        android:id="@+id/editTextActivityDescription"
        android:layout_width="287dp"
        android:layout_height="89dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/ActivityDescription"
        android:inputType="textMultiLine"
        android:lines="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewActivityDiscription" />

    <TextView
        android:id="@+id/textViewExpectedEffort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/customTextTest"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="Expected effort"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextActivityDescription" />

    <Spinner
        android:id="@+id/spinnerEffort"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/EffortList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewExpectedEffort" />

    <Spinner
        android:id="@+id/spinnerTime"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/EffortList"
        app:layout_constraintStart_toStartOf="@+id/textViewExpectedTime"
        app:layout_constraintTop_toBottomOf="@+id/textViewExpectedTime" />

    <TextView
        android:id="@+id/textViewGenderForAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/customTextTest"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="gender segregation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEffort" />

    <TextView
        android:id="@+id/textViewAgeActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/customTextTest"
        android:layout_marginTop="50dp"
        android:text="preferred age"
        app:layout_constraintStart_toStartOf="@+id/spinnerTime"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTime" />

    <EditText
        android:id="@+id/editTextMinAge"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/minAge"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textViewAgeActivity"
        app:layout_constraintTop_toBottomOf="@+id/textViewminAge" />

    <TextView
        android:id="@+id/textViewminAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/customTextTest"
        android:text="min"
        app:layout_constraintEnd_toEndOf="@+id/editTextMinAge"
        app:layout_constraintStart_toStartOf="@+id/editTextMinAge"
        app:layout_constraintTop_toBottomOf="@+id/textViewAgeActivity" />

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:text="category"
        style="@style/customTextTest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerGender" />

    <Button
        android:id="@+id/buttonCreateActivity"
        android:layout_width="272dp"
        android:layout_height="82dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:text="@string/CreateActivity"
        app:backgroundTint="#8BC34A"
        app:iconTint="#A82A2A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewUploadedImage" />

    <TextView
        android:id="@+id/textViewStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="starting date"
        style="@style/customTextTest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategory" />

    <Button
        android:id="@+id/button_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="12/01/2022"
        app:backgroundTint="#142165"
        app:layout_constraintStart_toStartOf="@+id/textViewStartDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewStartDate" />

    <Button
        android:id="@+id/button_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="hh:mm"
        app:backgroundTint="#142165"
        app:layout_constraintStart_toStartOf="@+id/textViewStartTime"
        app:layout_constraintTop_toBottomOf="@+id/textViewStartTime" />

    <Button
        android:id="@+id/imageButtonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@null"
        android:layout_marginTop="10dp"
        style="@style/customButtonDeleteImage"
        android:text = "remove activity"
        app:layout_constraintEnd_toEndOf="@+id/editTextActivityName"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonDeleteImageActivity"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/ic_vufinder_delete_red"
        android:contentDescription="@string/DeleteActivity"
        app:layout_constraintStart_toEndOf="@+id/imageButtonCameraUpload"
        app:layout_constraintTop_toTopOf="@+id/imageButtonCameraUpload" />

    <Button
        android:id="@+id/buttonCancel"
        app:backgroundTint="@null"
        style="@style/customButtonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="Cancel"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonDelete"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLocation"
        app:backgroundTint="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Insert location"
        style="@style/customButtonLocation"
        app:layout_constraintStart_toStartOf="@+id/button_date"
        app:layout_constraintTop_toBottomOf="@+id/button_date" />

    <CheckBox
        android:id="@+id/checkBoxNoLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="no presense required"
        app:layout_constraintStart_toEndOf="@+id/buttonLocation"
        app:layout_constraintTop_toTopOf="@+id/buttonLocation" />

    <Button
        android:id="@+id/buttonUploadImageActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Upload Image"
        app:backgroundTint="#142165"
        app:layout_constraintStart_toStartOf="@id/buttonLocation"
        app:layout_constraintTop_toBottomOf="@id/textViewStoredLocation" />

    <ImageView
        android:id="@+id/imageViewUploadedImage"
        android:layout_width="255dp"
        android:layout_height="159dp"
        app:layout_constraintStart_toStartOf="@id/buttonUploadImageActivity"
        app:layout_constraintTop_toBottomOf="@+id/buttonUploadImageActivity"
        app:srcCompat="@drawable/activity_bg" />

    <ImageButton
        android:id="@+id/imageButtonCameraUpload"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:contentDescription="@string/uploadPicFromCamera"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonUploadImageActivity"
        app:layout_constraintStart_toEndOf="@+id/buttonUploadImageActivity"
        app:layout_constraintTop_toTopOf="@+id/buttonUploadImageActivity"
        android:background="@drawable/ic_vufinder_camera" />

    <TextView
        android:id="@+id/textViewStoredLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="TextView"
        style="@style/customTextTest"
        app:layout_constraintStart_toStartOf="@+id/buttonLocation"
        app:layout_constraintTop_toBottomOf="@+id/buttonLocation" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>