<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity"
    android:background="@drawable/appbg">

    <EditText
        android:id="@+id/Email"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="50dp"
        android:background="#5CCFCBCB"
        android:ems="10"
        android:hint="Email"
        android:inputType="textWebEmailAddress"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginBottom="15dp"
        android:text="password"
        android:textColor="#070707"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginBottom="15dp"
        android:text="Email"
        android:textColor="#151515"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="100dp"
        android:background="#5CCFCBCB"
        android:ems="10"
        android:hint="password"
        android:inputType="textWebPassword"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/Signup_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Signup_button"
        android:layout_marginBottom="150dp"
        style="@style/customButtonLogIn"
        android:text="@string/log_in"
        android:textSize="24sp"
        app:backgroundTint="@null"
        android:layout_width="271dp"
        android:layout_height="87dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="186dp"
        android:text="does not have an account?"
        android:textColor="#673AB7"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/log_in_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="97dp"
        android:layout_height="61dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_vu_home"
        android:contentDescription="@string/menu_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>